# ROS2-study

./: .gitignore  README.md
actions_py/: package.xml  setup.py
actions_py/actions_py/: count_until_client.py  count_until_server.py  move_robot_client.py  move_robot_server.py
components_cpp/: CMakeLists.txt
components_cpp/src/: manual_composition.cpp  node1.cpp  node2.cpp  number_publisher.cpp
components_py/: setup.py
components_py/components_py/: manual_composition.py
docs/: Actions.md  Bags.md  CommonInterfaces.md  Components.md  CustomInterfaces.md  Executors.md  LaunchFiles.md  LifecycleNodes.md  Parameters.md  ProjectNodes.md  Services.md  Topics.md  TurtlesimCatchThemAll.md  WorkspaceAndPackages.md
docs/images/: README.md
executors_py/executors_py/: multi_threaded_executor.py  (+2 more)
exercise_1/: package.xml  setup.cfg  setup.py
exercise_2/: package.xml  setup.cfg  setup.py
final_project_level3/: package.xml  setup.cfg  setup.py
final_project_level3_cpp/: CMakeLists.txt  README.md  package.xml
final_project_level3_cpp/src/: turtle_controller_component.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lifecycle_py/: setup.py
log/: latest_build  latest_list
my_cpp_pkg/: package.xml
my_py_pkg/: package.xml  setup.py
my_robot_bringup/: package.xml
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces_exercise_2/: CMakeLists.txt  package.xml
my_robot_interfaces_prova_robotica2/: CMakeLists.txt  package.xml
prova_robotica2/: package.xml  setup.cfg  setup.py
tiago_examples/: README.md  package.xml  setup.cfg  setup.py
turtlesim_catch_them_all/: package.xml  setup.py
(+77 files in other folders)
